[gd_scene load_steps=29 format=3 uid="uid://de75pb8ek3ngu"]

[ext_resource type="Texture2D" uid="uid://c7wf41tjn45me" path="res://assets/useful shit/conveyor.png" id="1_hhedt"]
[ext_resource type="Script" uid="uid://dc21we2q5q57w" path="res://esteira.gd" id="1_ls025"]
[ext_resource type="Texture2D" uid="uid://oh24vusubdof" path="res://assets/useful shit/conveyors/conveyor-0-0.png" id="3_kegw6"]
[ext_resource type="Texture2D" uid="uid://b6v8xskfef8ax" path="res://assets/useful shit/conveyors/conveyor-0-1.png" id="4_uf5y4"]
[ext_resource type="Texture2D" uid="uid://df5v7t36veb3u" path="res://assets/useful shit/conveyors/conveyor-0-2.png" id="5_dtplc"]
[ext_resource type="Texture2D" uid="uid://db6g7fsamghu5" path="res://assets/useful shit/conveyors/conveyor-0-3.png" id="6_k4aao"]
[ext_resource type="Texture2D" uid="uid://bvcvhb17uqslg" path="res://assets/useful shit/conveyors/conveyor-4-0.png" id="7_dq3x7"]
[ext_resource type="Texture2D" uid="uid://wllcqgm6dq41" path="res://assets/useful shit/conveyors/conveyor-4-1.png" id="8_popdw"]
[ext_resource type="Texture2D" uid="uid://br4qe4uxaaipg" path="res://assets/useful shit/conveyors/conveyor-4-2.png" id="9_tk2ss"]
[ext_resource type="Texture2D" uid="uid://bb5q22hg0nod1" path="res://assets/useful shit/conveyors/conveyor-4-3.png" id="10_gcdqb"]
[ext_resource type="Texture2D" uid="uid://byluuilxrjru4" path="res://assets/useful shit/conveyors/conveyor-3-0.png" id="11_72wtl"]
[ext_resource type="Texture2D" uid="uid://bmer5oocruc5k" path="res://assets/useful shit/conveyors/conveyor-3-1.png" id="12_72geg"]
[ext_resource type="Texture2D" uid="uid://dgx8kv37r82xq" path="res://assets/useful shit/conveyors/conveyor-3-2.png" id="13_6n6ht"]
[ext_resource type="Texture2D" uid="uid://dm272t7vsg6ue" path="res://assets/useful shit/conveyors/conveyor-3-3.png" id="14_y2srf"]
[ext_resource type="Texture2D" uid="uid://8j2dcxeyg72f" path="res://assets/useful shit/conveyors/conveyor-2-0.png" id="15_ejuyh"]
[ext_resource type="Texture2D" uid="uid://bfrwx3alhqwjq" path="res://assets/useful shit/conveyors/conveyor-2-1.png" id="16_us0pv"]
[ext_resource type="Texture2D" uid="uid://c2222a3ogqebs" path="res://assets/useful shit/conveyors/conveyor-2-2.png" id="17_6insl"]
[ext_resource type="Texture2D" uid="uid://ct7dgn05nf1c7" path="res://assets/useful shit/conveyors/conveyor-2-3.png" id="18_tvl3u"]
[ext_resource type="Texture2D" uid="uid://ca5nxhkd5km4d" path="res://assets/useful shit/conveyors/conveyor-1-0.png" id="19_rusqd"]
[ext_resource type="Texture2D" uid="uid://cpgyq82qyavki" path="res://assets/useful shit/conveyors/conveyor-1-1.png" id="20_yumyq"]
[ext_resource type="Texture2D" uid="uid://c6ly6fybrkc7j" path="res://assets/useful shit/conveyors/conveyor-1-2.png" id="21_06hgp"]
[ext_resource type="Texture2D" uid="uid://c5iaf4xtxc5wp" path="res://assets/useful shit/conveyors/conveyor-1-3.png" id="22_ebfen"]
[ext_resource type="Texture2D" uid="uid://b7u2kcbcu02c5" path="res://assets/useful shit/place-arrow.png" id="23_uf5y4"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ltxd1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_kegw6")
}, {
"duration": 1.0,
"texture": ExtResource("4_uf5y4")
}, {
"duration": 1.0,
"texture": ExtResource("5_dtplc")
}, {
"duration": 1.0,
"texture": ExtResource("6_k4aao")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_75w3v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_dq3x7")
}, {
"duration": 1.0,
"texture": ExtResource("8_popdw")
}, {
"duration": 1.0,
"texture": ExtResource("9_tk2ss")
}, {
"duration": 1.0,
"texture": ExtResource("10_gcdqb")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_3e0nq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_72wtl")
}, {
"duration": 1.0,
"texture": ExtResource("12_72geg")
}, {
"duration": 1.0,
"texture": ExtResource("13_6n6ht")
}, {
"duration": 1.0,
"texture": ExtResource("14_y2srf")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_onpw7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_ejuyh")
}, {
"duration": 1.0,
"texture": ExtResource("16_us0pv")
}, {
"duration": 1.0,
"texture": ExtResource("17_6insl")
}, {
"duration": 1.0,
"texture": ExtResource("18_tvl3u")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_aa170"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_rusqd")
}, {
"duration": 1.0,
"texture": ExtResource("20_yumyq")
}, {
"duration": 1.0,
"texture": ExtResource("21_06hgp")
}, {
"duration": 1.0,
"texture": ExtResource("22_ebfen")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="Esteira" type="Node2D"]
script = ExtResource("1_ls025")

[node name="Conveyor" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-16, -16)
texture = ExtResource("1_hhedt")
centered = false

[node name="conveyor0" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(-16, -16)
sprite_frames = SubResource("SpriteFrames_ltxd1")
frame = 3
frame_progress = 1.0
centered = false

[node name="conveyor1" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(-16, -16)
sprite_frames = SubResource("SpriteFrames_75w3v")
centered = false

[node name="conveyor2" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(-16, -16)
sprite_frames = SubResource("SpriteFrames_3e0nq")
frame = 3
frame_progress = 1.0
centered = false

[node name="conveyor3" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(-16, -16)
sprite_frames = SubResource("SpriteFrames_onpw7")
frame = 3
frame_progress = 1.0
centered = false

[node name="Place-arrow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 0.666667, 1)
z_index = -1
position = Vector2(-1, 0)
rotation = 1.5708
texture = ExtResource("23_uf5y4")

[node name="ESTEIRA4" type="Node2D" parent="."]

[node name="VeioDe-VaiPara" type="Node" parent="ESTEIRA4"]

[node name="DOWN-RIGHT" type="AnimatedSprite2D" parent="ESTEIRA4"]
visible = false
position = Vector2(-16, -16)
sprite_frames = SubResource("SpriteFrames_aa170")
frame_progress = 0.77893
centered = false

[node name="DOWN-LEFT" type="AnimatedSprite2D" parent="ESTEIRA4"]
visible = false
position = Vector2(-16, -16)
sprite_frames = SubResource("SpriteFrames_aa170")
frame_progress = 0.943137
centered = false
flip_h = true

[node name="UP-RIGHT" type="AnimatedSprite2D" parent="ESTEIRA4"]
visible = false
position = Vector2(-16, -16)
sprite_frames = SubResource("SpriteFrames_aa170")
frame_progress = 0.205876
centered = false
flip_v = true

[node name="UP-LEFT" type="AnimatedSprite2D" parent="ESTEIRA4"]
visible = false
position = Vector2(-16, -16)
sprite_frames = SubResource("SpriteFrames_aa170")
frame_progress = 0.834007
centered = false
flip_h = true
flip_v = true

[node name="RIGHT-DOWN" type="AnimatedSprite2D" parent="ESTEIRA4"]
visible = false
position = Vector2(-16, 16)
rotation = 4.71239
sprite_frames = SubResource("SpriteFrames_aa170")
frame_progress = 0.78842
centered = false
flip_h = true

[node name="RIGHT-UP" type="AnimatedSprite2D" parent="ESTEIRA4"]
visible = false
position = Vector2(16, -16)
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_aa170")
frame_progress = 0.656445
centered = false
flip_h = true
flip_v = true

[node name="LEFT-DOWN" type="AnimatedSprite2D" parent="ESTEIRA4"]
visible = false
position = Vector2(16, -16)
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_aa170")
frame_progress = 0.57251
centered = false

[node name="LEFT-UP" type="AnimatedSprite2D" parent="ESTEIRA4"]
visible = false
position = Vector2(16, -16)
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_aa170")
frame_progress = 0.0915459
centered = false
flip_h = true

[node name="cantos" type="Node2D" parent="."]
visible = false

[node name="conveyor4-0" type="AnimatedSprite2D" parent="cantos"]
position = Vector2(224, -63)
sprite_frames = SubResource("SpriteFrames_aa170")
frame_progress = 0.97579
centered = false

[node name="2" type="Node2D" parent="cantos"]

[node name="3" type="Node2D" parent="cantos"]

[node name="4" type="Node2D" parent="cantos"]

[node name="5" type="Node2D" parent="cantos"]
